<resources>
    <string name="app_name">PACKETIVEX</string>
</resources>
